Added Milestones and Repos table

--- a/GitHubReportMd.ipynb
+++ b/GitHubReportMd.ipynb
@@ -6,8 +6,8 @@
    "id": "b912c774",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-23T16:53:35.719760Z",
-     "start_time": "2022-02-23T16:53:35.689993Z"
+     "end_time": "2022-02-27T22:27:06.374655Z",
+     "start_time": "2022-02-27T22:27:06.354204Z"
     }
    },
    "outputs": [],
@@ -21,11 +21,16 @@
     "import datetime  \n",
     "import pytz\n",
     "from dateutil.relativedelta import relativedelta\n",
+    "import textwrap\n",
+    "import json\n",
     "\n",
     "display(HTML(\"<style>.container { width:310mm !important; }</style>\"))\n",
     "with open('ReposIssuesList.json') as f:\n",
     "    data = f.read()\n",
     "reposIssuesList = json.loads(data)\n",
+    "with open('MilestonesList.json') as f:\n",
+    "    data = f.read()\n",
+    "milestonesList = json.loads(data)\n",
     "#\n",
     "# To Create WebPdf use:   jupyter nbconvert .\\GitHubReportMd.ipynb --to webpdf --no-input\n",
     "#"
@@ -37,8 +42,8 @@
    "id": "27be11c9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-23T16:53:42.772156Z",
-     "start_time": "2022-02-23T16:53:42.762199Z"
+     "end_time": "2022-02-27T22:27:06.383770Z",
+     "start_time": "2022-02-27T22:27:06.377624Z"
     }
    },
    "outputs": [],
@@ -66,33 +71,50 @@
     "\\\\textit{Comments:} &  COMM \n",
     "\\\\end{array}  \n",
     "\"\"\"\n",
-    "\n",
+    "STATE_TEMPLATE = \"\"\"\n",
+    "\\\\begin{array}{l r} \n",
+    "\\\\textsf{Open:} &  \\\\textsf{OPEN} \\\\\\ \n",
+    "\\\\textsf{Closed:} & \\\\textsf {CLOSED} \\\\\\ \n",
+    "\\\\end{array}  \n",
+    "\"\"\"\n",
     "TASKS_TEMPLATE = \"\"\"\n",
     "\\\\begin{array}{l l} \n",
     "\\\\textit{Tasks:} & \\\\hspace {10mm} TASKS \n",
     "\\\\end{array} \n",
-    "\"\"\""
+    "\"\"\"\n",
+    "# print('\\nIssues Closed Last Week')\n",
+    "closedTitle = \"\"\"<div style=\\\"page-break-after: always;\\\"></div>\n",
+    "<hr style=\"height:5px;border-width:0;color:green;background-color:green\">\n",
+    "$ \\hspace {20mm} \\\\normalsize \\\\color{green} \n",
+    "{\\\\textbf{Summary of Issues Closed During Last 7 Days (Including Merged Branches)}} \\\\\\[1pt]  $ \n",
+    "<hr style=\"height:5px;border-width:0;color:green;background-color:green\">\n",
+    "\"\"\"\n",
+    "\n",
+    "# print('\\nIssues Opened Last Week')\n",
+    "openedTitle = \"\"\"<div style=\\\"page-break-after: always;\\\"></div>\n",
+    "<hr style=\"height:5px;border-width:0;color:red;background-color:red\">\n",
+    "$ \\hspace {50mm} \\\\normalsize \\\\color{red} \n",
+    "{\\\\textbf{Summary of Issues Opened During Last 7 Days}} \\\\\\[1pt]  $ \n",
+    "<hr style=\"height:5px;border-width:0;color:red;background-color:red\">\n",
+    "\"\"\"\n",
+    "reportTitle = \\\n",
+    "\"\"\"\\hspace {40mm} \\Large {\\\\textbf{TRUCCR Milestones/Issues Report}} \\\\\\[1pt]\n",
+    "\\hspace {80mm} \\\\small {\\\\textsf{Date: TDATE  }   }   \\\\\\[20pt] \"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0ca6e1e",
+   "id": "5d151d5a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-23T16:53:48.731543Z",
-     "start_time": "2022-02-23T16:53:48.654255Z"
+     "end_time": "2022-02-27T22:27:06.406556Z",
+     "start_time": "2022-02-27T22:27:06.384768Z"
     },
-    "code_folding": [
-     63,
-     73,
-     95,
-     132
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
-    "\n",
     "issuesList = []\n",
     "for repo in reposIssuesList:\n",
     "    for issue in repo['issues']:\n",
@@ -114,29 +136,126 @@
     "td = datetime.datetime.today()\n",
     "start_datetime =  td  + relativedelta(days=-7) \n",
     "recently_datetime = start_datetime.astimezone(pytz.timezone('US/Eastern'))\n",
-    "# print('Recent start date '   ,\n",
-    "#       recently_datetime.astimezone(pytz.timezone('US/Eastern')).strftime(\"%m/%d/%Y %I:%M %p %Z\") )   \n",
-    "reportTitle = \\\n",
-    "\"\"\"\\hspace {60mm} \\Large {\\\\textbf{TRUCCR Issues Report}} \\\\\\[1pt]\n",
-    "\\hspace {80mm} \\\\small {\\\\textsf{Date: TDATE  }   }   \\\\\\[20pt] \"\"\"\n",
     "\n",
     "today = td.astimezone(pytz.timezone('US/Eastern'))\n",
     "todayDate = today.strftime(\"%m/%d/%Y\")\n",
     "display(Markdown( '$ ' + reportTitle.replace('TDATE', todayDate  ) + ' $' ))\n",
-    "currentIssuesTitle = \"\"\"$\n",
-    "\\hspace {70mm} \\\\large \\\\color{red}  {\\\\textbf{Current Open Issues}} \n",
-    "\\hspace {75mm} \\\\normalsize \\\\color{blue}  {\\\\textsf{Grouped by Milestone}} \\\\\\[10pt]\n",
+    "#\n",
+    "#  REPO's section\n",
+    "#\n",
+    "grandTotRepoOpen = 0\n",
+    "grandTotRepoClosed = 0\n",
+    "\n",
+    "for repo in reposIssuesList: \n",
+    "    grandTotRepoOpen = grandTotRepoOpen + repo['open']\n",
+    "    grandTotRepoClosed = grandTotRepoClosed + repo['closed']\n",
+    "    \n",
+    "repoMatrix = ' \\\\begin{array}{| l l |} \\\\hline '\n",
+    "newMatrixLine = ''\n",
+    "\n",
+    "for repo in reposIssuesList: \n",
+    "#     print(repo['repo_name'])\n",
+    "    repoMatrixLine = '\\\\hspace {0mm} \\\\small {\\\\textbf{REPO}  }  &  STATE  \\\\\\[1pt] \\\\hline '\n",
+    "    newLine = repoMatrixLine.replace('REPO',repo['repo_name'])\n",
+    "    repoState = STATE_TEMPLATE.replace('OPEN' , str(repo['open'])  )\n",
+    "    repoState = repoState.replace('CLOSED' , str(repo['closed'])  ) \n",
+    "    newLine =  newLine.replace('STATE' , repoState )\n",
+    "    newMatrixLine = newMatrixLine + newLine\n",
+    "    \n",
+    "totStates = STATE_TEMPLATE.replace('OPEN' , str( grandTotRepoOpen )  )\n",
+    "totStates = totStates.replace('CLOSED' , str(grandTotRepoClosed) )\n",
+    "repoMatrixLine = '\\\\hspace {0mm} \\\\small {\\\\textbf{REPO}  }  &  STATE  \\\\\\[1pt] \\\\hline '\n",
+    "newLine = repoMatrixLine.replace('REPO', 'Total')\n",
+    "newLine =  newLine.replace('STATE' , totStates )\n",
+    "newMatrixLine = newMatrixLine + newLine\n",
+    "repoMatrix = repoMatrix + newMatrixLine + '  \\\\end{array} \\\\\\[1pt] '\n",
+    "# print(repoState)\n",
+    "repoTitle =  '\\\\hspace {5mm} \\\\large { \\\\color{black}{\\\\textbf{Repository Issue Status} } }  \\\\\\[1pt]  '\n",
+    "display(Markdown( '$ ' + repoTitle + repoMatrix  + ' $' ))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e40d4211",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-27T22:30:09.610725Z",
+     "start_time": "2022-02-27T22:30:09.587223Z"
+    },
+    "code_folding": [
+     42
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#\n",
+    "# MILESTONE section\n",
+    "#\n",
+    "wrapper = textwrap.TextWrapper(width=80)\n",
+    "mStoneMatrix = ' \\\\begin{array}{| l l |} \\\\hline '\n",
+    "mStoneTitle =  '\\\\hspace {5mm} \\\\large { \\\\color{blue}{\\\\textbf{Currently Open Milestones} } }  \\\\\\[1pt]  '\n",
+    "\n",
+    "sortedStoneList = sorted(milestonesList ,key=lambda i:i['due_on'] )\n",
+    "\n",
+    "for milestone in sortedStoneList:\n",
+    "#     print(milestone['title'])\n",
+    "    matrixLine = ' \\\\small { \\\\color{blue} {\\\\textbf {MSTONE}} } & \\\\small {\\\\textsf{Due: MDATE } }  \\\\\\ '\n",
+    "    matrixLine = matrixLine.replace('MSTONE', milestone['title'] )\n",
+    "    dueDate = milestone['due_on'][5:10] if milestone['due_on'] else 'TBD'\n",
+    "    matrixLine = matrixLine.replace('MDATE',dueDate )\n",
+    "    matrixLine2 = '   MDESCR  & \\\\small \\\\textsf{ }   \\\\\\ '\n",
+    "    mDescr = milestone['description'] if milestone['description'] else \"None\"\n",
+    "    # Wrap this text.\n",
+    "    mDescr = wrapper.wrap(text=mDescr)\n",
+    "    # Print each line.\n",
+    "    descrMatrix = ' \\\\hspace {10mm} \\\\begin{array}{ l}  '\n",
+    "    for element in mDescr:\n",
+    "        mLine =  ' \\\\small { \\\\textsf {MLINE} } \\\\\\ '\n",
+    "        mLine = mLine.replace('MLINE',element)\n",
+    "        descrMatrix = descrMatrix + mLine\n",
+    "#         print(element)\n",
+    "    descrMatrix = descrMatrix + '  \\\\end{array} '\n",
+    "    matrixLine2 = matrixLine2.replace('MDESCR' ,  descrMatrix )\n",
+    "    mStoneMatrix = mStoneMatrix  +   matrixLine + matrixLine2 + ' \\\\hdashline  '\n",
+    "\n",
+    "mStoneMatrix = mStoneMatrix + ' \\\\end{array} \\\\\\[1pt]  '\n",
+    "display(Markdown( '$ ' + mStoneTitle + mStoneMatrix + '  $' ))\n",
+    "# print( mStoneTitle + mStoneMatrix   )\n",
+    "# print('num: ', len(mDescr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0ca6e1e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-02-27T22:27:06.512655Z",
+     "start_time": "2022-02-27T22:27:06.418133Z"
+    },
+    "code_folding": [
+     10,
+     95
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#\n",
+    "#  ISSUES section\n",
+    "#\n",
+    "currentIssuesTitle = \"\"\"<div style=\\\"page-break-after: always;\\\"></div>\n",
+    "$ \n",
+    "\\\\hspace {70mm}  \\\\large \\\\color{red}  {\\\\textbf{Current Open Issues}} \\\\Huge {  \\\\phantom{X}} \n",
+    "\\\\hspace {75mm} \\\\normalsize \\\\color{blue}  {\\\\textsf{Grouped by Milestone}} \\\\\\[10pt]\n",
     "$ \"\"\"\n",
     "display(Markdown(currentIssuesTitle ))\n",
     "milestoneTitle = '$ \\hspace {0mm} \\\\large  \\\\color{blue}{\\\\textsf{ MSTONE}} $ '\n",
     "\n",
-    "# print ('Open Issues')\n",
-    "milestones = ['Speedometer is Multi Tenant Capable'  , 'Tachometer is Functional' , 'CURB is Functional',\n",
-    "              'Standards Compliant', 'Glovebox is Functional', 'Ongoing Support of UAT and Prod']\n",
-    "for milestone in milestones:\n",
-    "    display(Markdown( milestoneTitle.replace('MSTONE', milestone  ) ))\n",
+    "for milestone in sortedStoneList:\n",
+    "    display(Markdown( milestoneTitle.replace('MSTONE', milestone['title']  ) ))\n",
     "    for issue in issuesList:\n",
-    "        if issue['state'] == 'open' and issue['milestone'] == milestone:\n",
+    "        if issue['state'] == 'open' and issue['milestone'] == milestone['title']:\n",
     "    #         print('\\n' + issue['issue_title'] + ' - #' + str(issue['issue_number'] )   )\n",
     "            openIssues = OPEN_ISSUES_TEMPLATE\n",
     "            openIssues = openIssues.replace('TITLE' , issue['issue_title'] )\n",
@@ -187,14 +306,6 @@
     "\n",
     "            display(Markdown ('$ ' + openIssues   + ' $'    ))\n",
     "\n",
-    "# print('\\nIssues Closed Last Week')\n",
-    "closedTitle = \"\"\"<div style=\\\"page-break-after: always;\\\"></div>\n",
-    "<hr style=\"height:5px;border-width:0;color:green;background-color:green\">\n",
-    "$ \\hspace {20mm} \\\\normalsize \\\\color{green} \n",
-    "{\\\\textbf{Summary of Issues Closed During Last 7 Days (Including Merged Branches)}} \\\\\\[1pt]  $ \n",
-    "<hr style=\"height:5px;border-width:0;color:green;background-color:green\">\n",
-    "\"\"\"\n",
-    "\n",
     "display(Markdown( closedTitle  ))\n",
     "for issue in issuesList:\n",
     "    if issue['state'] == 'closed':\n",
@@ -225,13 +336,6 @@
     "            \n",
     "        display(Markdown ('$ ' + closedIssue   + ' $'    ))\n",
     "\n",
-    "# print('\\nIssues Opened Last Week')\n",
-    "openedTitle = \"\"\"<div style=\\\"page-break-after: always;\\\"></div>\n",
-    "<hr style=\"height:5px;border-width:0;color:red;background-color:red\">\n",
-    "$ \\hspace {50mm} \\\\normalsize \\\\color{red} \n",
-    "{\\\\textbf{Summary of Issues Opened During Last 7 Days}} \\\\\\[1pt]  $ \n",
-    "<hr style=\"height:5px;border-width:0;color:red;background-color:red\">\n",
-    "\"\"\"\n",
     "display(Markdown( openedTitle ))\n",
     "for issue in issuesList:\n",
     "    if issue['state'] == 'open':\n",
