--- a/GitHubReports.ipynb
+++ b/GitHubReports.ipynb
@@ -98,8 +98,8 @@
    "id": "e03e81e6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-22T14:50:42.885595Z",
-     "start_time": "2022-02-22T14:50:38.617839Z"
+     "end_time": "2022-02-27T22:24:53.461149Z",
+     "start_time": "2022-02-27T22:24:53.397643Z"
     },
     "code_folding": [
      21,
@@ -183,8 +183,8 @@
    "id": "a53b883e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-23T16:52:34.166595Z",
-     "start_time": "2022-02-23T16:52:26.831225Z"
+     "end_time": "2022-02-27T14:59:59.100159Z",
+     "start_time": "2022-02-27T14:59:51.492351Z"
     }
    },
    "outputs": [],
@@ -234,8 +234,8 @@
    "id": "80ab91e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-23T16:52:41.261995Z",
-     "start_time": "2022-02-23T16:52:41.254007Z"
+     "end_time": "2022-02-27T22:25:31.400155Z",
+     "start_time": "2022-02-27T22:25:31.370918Z"
     }
    },
    "outputs": [],
@@ -243,11 +243,7 @@
     "tmpReposFilterUrls = []\n",
     "# Add Filters as required as show below\n",
     "# tmpReposFilterUrls.append('JupyterCloud')\n",
-    "tmpReposFilterUrls.append('truccr_oci-iac')\n",
-    "tmpReposFilterUrls.append('truccr_oci-ca-dumptruck')\n",
-    "tmpReposFilterUrls.append('truccr_oci-manual-transmission')\n",
-    "# tmpReposFilterUrls.append('truccr_oci-frontloader')\n",
-    "# tmpReposFilterUrls.append('truccr_atlas')\n",
+    "\n",
     "\n",
     "print( 'Number of Filters: '  ,len(tmpReposFilterUrls))\n",
     "print('Filter List:')\n",
@@ -277,8 +273,8 @@
    "id": "dfef8a2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-23T16:52:46.740663Z",
-     "start_time": "2022-02-23T16:52:45.703352Z"
+     "end_time": "2022-02-27T22:25:39.522711Z",
+     "start_time": "2022-02-27T22:25:37.801312Z"
     }
    },
    "outputs": [],
@@ -309,26 +305,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "770a9470",
+   "id": "41af5a60",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-23T16:53:08.026526Z",
-     "start_time": "2022-02-23T16:52:51.254829Z"
+     "end_time": "2022-02-27T22:26:06.355912Z",
+     "start_time": "2022-02-27T22:25:44.981262Z"
     },
     "code_folding": [
-     18,
-     28
+     80
     ]
    },
    "outputs": [],
    "source": [
     "reposIssuesList = []\n",
+    "milestonesList = []\n",
     "targetBranch = 'alpha-dev'\n",
     "# targetBranch = 'main'\n",
+    "#  Milestones section\n",
+    "for repo in repos:\n",
+    "    #  oci-iac repo contains milestone descriptions and due dates\n",
+    "    \n",
+    "    if 'oci-iac' in repo['name']:\n",
+    "        milestonesUrl = repo['milestones_url']\n",
+    "        milestones = requests.get(milestonesUrl.replace('{/number}',''),auth=auth)\n",
+    "#         pprint.pprint(milestones.json())\n",
+    "        for milestone in milestones.json():\n",
+    "            print('Milestone: ', milestone['url'])\n",
+    "            mStone = requests.get(milestone['url'],auth=auth)\n",
+    "            print('title: ' , mStone.json()['title']  )\n",
+    "            print('State: ' , mStone.json()['state']  )\n",
+    "            print('Description: ' , mStone.json()['description'] )\n",
+    "            print('Due_on: ' , mStone.json()['due_on']  )\n",
+    "#             print('Open_issues: ' , mStone.json()['open_issues']  )\n",
+    "#             print('Closed_issues: ' , mStone.json()['closed_issues']  )\n",
+    "            milestonesDict = {}\n",
+    "            milestonesDict['title'] = mStone.json()['title'] \n",
+    "            milestonesDict['state'] = mStone.json()['state'] \n",
+    "            milestonesDict['description'] = mStone.json()['description'] \n",
+    "            milestonesDict['due_on'] = mStone.json()['due_on'] if mStone.json()['due_on'] else 'TBD'\n",
+    "            print('---')\n",
+    "            milestonesList.append(milestonesDict) \n",
     "\n",
+    "#  Issues section\n",
     "for repo in repos :\n",
     "    repoIssuesDict = {}\n",
     "    repoIssuesDict['repo_name'] = repo['name']\n",
+    "    repoIssuesDict['open'] = 0\n",
+    "    repoIssuesDict['closed'] = 0\n",
     "    print( 'Repo:',repo[\"name\"] + ' and branch: ' + targetBranch )\n",
     "    print('    Private:     ', repo['private'])\n",
     "    print('    HTTPS URL:   ', repo['clone_url'])\n",
@@ -384,7 +407,9 @@
     "        issuesDict['milestone'] = issue['milestone']\n",
     "\n",
     "        issuesDict['body'] = []\n",
+    "        \n",
     "        if 'open' in issue['state']:\n",
+    "            repoIssuesDict['open'] += 1\n",
     "            print('\\n         ' , '#' + str(issue['number']) + ' - ' +  issue['title'])   \n",
     "            print('                Created: ' + issue['created_at'])\n",
     "            print('                Tasks:')\n",
@@ -401,6 +426,8 @@
     "            else:\n",
     "                print('                No Tasks' , )   \n",
     "            issuesDict['body'] = issueTopicsList\n",
+    "        else:\n",
+    "            repoIssuesDict['closed'] += 1\n",
     "        issuesDict['labels'] = []\n",
     "        if len(issue['labels']) > 0:\n",
     "            for label in issue['labels'] :\n",
@@ -415,7 +442,11 @@
     "print('----------')\n",
     "with open('ReposIssuesList.json', 'w') as convert_file:\n",
     "     convert_file.write(json.dumps(reposIssuesList))\n",
-    "print('Conversion of Issues List to file is Complete - ReposIssuesList.json'  )"
+    "print('Conversion of Issues List to file is Complete - ReposIssuesList.json'  )\n",
+    "with open('MilestonesList.json', 'w') as convert_file:\n",
+    "     convert_file.write(json.dumps(milestonesList))\n",
+    "print('Conversion of Issues List to file is Complete - MilestonesList.json'  )\n",
+    "milestonesList"
    ]
   },
   {
