--- a/GitHubReports.ipynb
+++ b/GitHubReports.ipynb
@@ -98,8 +98,8 @@
    "id": "e03e81e6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-27T22:24:53.461149Z",
-     "start_time": "2022-02-27T22:24:53.397643Z"
+     "end_time": "2022-03-07T18:59:49.344658Z",
+     "start_time": "2022-03-07T18:59:47.668529Z"
     },
     "code_folding": [
      21,
@@ -183,8 +183,8 @@
    "id": "a53b883e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-27T14:59:59.100159Z",
-     "start_time": "2022-02-27T14:59:51.492351Z"
+     "end_time": "2022-03-09T02:26:46.994265Z",
+     "start_time": "2022-03-09T02:26:35.267039Z"
     }
    },
    "outputs": [],
@@ -234,8 +234,8 @@
    "id": "80ab91e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-27T22:25:31.400155Z",
-     "start_time": "2022-02-27T22:25:31.370918Z"
+     "end_time": "2022-03-09T02:26:53.433338Z",
+     "start_time": "2022-03-09T02:26:53.423859Z"
     }
    },
    "outputs": [],
@@ -243,6 +243,10 @@
     "tmpReposFilterUrls = []\n",
     "# Add Filters as required as show below\n",
     "# tmpReposFilterUrls.append('JupyterCloud')\n",
+    "tmpReposFilterUrls.append('truccr_oci-iac')\n",
+    "tmpReposFilterUrls.append('truccr_oci-ca-dumptruck')\n",
+    "tmpReposFilterUrls.append('truccr_oci-manual-transmission')\n",
+    "tmpReposFilterUrls.append('truccr_oci-frontloader')\n",
     "\n",
     "\n",
     "print( 'Number of Filters: '  ,len(tmpReposFilterUrls))\n",
@@ -273,8 +277,8 @@
    "id": "dfef8a2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-27T22:25:39.522711Z",
-     "start_time": "2022-02-27T22:25:37.801312Z"
+     "end_time": "2022-03-09T02:27:00.459385Z",
+     "start_time": "2022-03-09T02:26:59.023674Z"
     }
    },
    "outputs": [],
@@ -308,10 +312,11 @@
    "id": "41af5a60",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-27T22:26:06.355912Z",
-     "start_time": "2022-02-27T22:25:44.981262Z"
+     "end_time": "2022-03-09T22:05:49.163390Z",
+     "start_time": "2022-03-09T22:05:26.556658Z"
     },
     "code_folding": [
+     56,
      80
     ]
    },
