--- a/GitHubReportMd.ipynb
+++ b/GitHubReportMd.ipynb
@@ -6,8 +6,8 @@
    "id": "b912c774",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-27T22:27:06.374655Z",
-     "start_time": "2022-02-27T22:27:06.354204Z"
+     "end_time": "2022-03-09T22:07:03.614425Z",
+     "start_time": "2022-03-09T22:07:03.591370Z"
     }
    },
    "outputs": [],
@@ -42,8 +42,8 @@
    "id": "27be11c9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-27T22:27:06.383770Z",
-     "start_time": "2022-02-27T22:27:06.377624Z"
+     "end_time": "2022-03-09T22:07:03.624013Z",
+     "start_time": "2022-03-09T22:07:03.616390Z"
     }
    },
    "outputs": [],
@@ -105,11 +105,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d151d5a",
+   "id": "e2a2bb00",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-27T22:27:06.406556Z",
-     "start_time": "2022-02-27T22:27:06.384768Z"
+     "end_time": "2022-03-09T22:07:03.634008Z",
+     "start_time": "2022-03-09T22:07:03.625303Z"
     },
     "code_folding": []
    },
@@ -139,39 +139,7 @@
     "\n",
     "today = td.astimezone(pytz.timezone('US/Eastern'))\n",
     "todayDate = today.strftime(\"%m/%d/%Y\")\n",
-    "display(Markdown( '$ ' + reportTitle.replace('TDATE', todayDate  ) + ' $' ))\n",
-    "#\n",
-    "#  REPO's section\n",
-    "#\n",
-    "grandTotRepoOpen = 0\n",
-    "grandTotRepoClosed = 0\n",
-    "\n",
-    "for repo in reposIssuesList: \n",
-    "    grandTotRepoOpen = grandTotRepoOpen + repo['open']\n",
-    "    grandTotRepoClosed = grandTotRepoClosed + repo['closed']\n",
-    "    \n",
-    "repoMatrix = ' \\\\begin{array}{| l l |} \\\\hline '\n",
-    "newMatrixLine = ''\n",
-    "\n",
-    "for repo in reposIssuesList: \n",
-    "#     print(repo['repo_name'])\n",
-    "    repoMatrixLine = '\\\\hspace {0mm} \\\\small {\\\\textbf{REPO}  }  &  STATE  \\\\\\[1pt] \\\\hline '\n",
-    "    newLine = repoMatrixLine.replace('REPO',repo['repo_name'])\n",
-    "    repoState = STATE_TEMPLATE.replace('OPEN' , str(repo['open'])  )\n",
-    "    repoState = repoState.replace('CLOSED' , str(repo['closed'])  ) \n",
-    "    newLine =  newLine.replace('STATE' , repoState )\n",
-    "    newMatrixLine = newMatrixLine + newLine\n",
-    "    \n",
-    "totStates = STATE_TEMPLATE.replace('OPEN' , str( grandTotRepoOpen )  )\n",
-    "totStates = totStates.replace('CLOSED' , str(grandTotRepoClosed) )\n",
-    "repoMatrixLine = '\\\\hspace {0mm} \\\\small {\\\\textbf{REPO}  }  &  STATE  \\\\\\[1pt] \\\\hline '\n",
-    "newLine = repoMatrixLine.replace('REPO', 'Total')\n",
-    "newLine =  newLine.replace('STATE' , totStates )\n",
-    "newMatrixLine = newMatrixLine + newLine\n",
-    "repoMatrix = repoMatrix + newMatrixLine + '  \\\\end{array} \\\\\\[1pt] '\n",
-    "# print(repoState)\n",
-    "repoTitle =  '\\\\hspace {5mm} \\\\large { \\\\color{black}{\\\\textbf{Repository Issue Status} } }  \\\\\\[1pt]  '\n",
-    "display(Markdown( '$ ' + repoTitle + repoMatrix  + ' $' ))\n"
+    "display(Markdown( '$ ' + reportTitle.replace('TDATE', todayDate  ) + ' $' ))"
    ]
   },
   {
@@ -180,12 +148,11 @@
    "id": "e40d4211",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-27T22:30:09.610725Z",
-     "start_time": "2022-02-27T22:30:09.587223Z"
+     "end_time": "2022-03-09T22:07:03.654650Z",
+     "start_time": "2022-03-09T22:07:03.635007Z"
     },
-    "code_folding": [
-     42
-    ]
+    "code_folding": [],
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -228,11 +195,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "77e40982",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-09T22:07:03.665080Z",
+     "start_time": "2022-03-09T22:07:03.656626Z"
+    },
+    "code_folding": []
+   },
+   "outputs": [],
+   "source": [
+    "#\n",
+    "#  REPO's Summary section\n",
+    "#\n",
+    "grandTotRepoOpen = 0\n",
+    "grandTotRepoClosed = 0\n",
+    "\n",
+    "for repo in reposIssuesList: \n",
+    "    grandTotRepoOpen = grandTotRepoOpen + repo['open']\n",
+    "    grandTotRepoClosed = grandTotRepoClosed + repo['closed']\n",
+    "    \n",
+    "repoMatrix = ' \\\\begin{array}{| l l |} \\\\hline '\n",
+    "newMatrixLine = ''\n",
+    "\n",
+    "for repo in reposIssuesList: \n",
+    "#     print(repo['repo_name'])\n",
+    "    repoMatrixLine = '\\\\hspace {0mm} \\\\small {\\\\textbf{REPO}  }  &  STATE  \\\\\\[1pt] \\\\hline '\n",
+    "    newLine = repoMatrixLine.replace('REPO',repo['repo_name'])\n",
+    "    repoState = STATE_TEMPLATE.replace('OPEN' , str(repo['open'])  )\n",
+    "    repoState = repoState.replace('CLOSED' , str(repo['closed'])  ) \n",
+    "    newLine =  newLine.replace('STATE' , repoState )\n",
+    "    newMatrixLine = newMatrixLine + newLine\n",
+    "    \n",
+    "totStates = STATE_TEMPLATE.replace('OPEN' , str( grandTotRepoOpen )  )\n",
+    "totStates = totStates.replace('CLOSED' , str(grandTotRepoClosed) )\n",
+    "repoMatrixLine = '\\\\hspace {0mm} \\\\small {\\\\textbf{REPO}  }  &  STATE  \\\\\\[1pt] \\\\hline '\n",
+    "newLine = repoMatrixLine.replace('REPO', 'Total')\n",
+    "newLine =  newLine.replace('STATE' , totStates )\n",
+    "newMatrixLine = newMatrixLine + newLine\n",
+    "repoMatrix = repoMatrix + newMatrixLine + '  \\\\end{array} \\\\\\[1pt] '\n",
+    "# print(repoState)\n",
+    "repoTitle =  '\\\\hspace {5mm} \\\\large { \\\\color{black}{\\\\textbf{Repository Issue Status} } }  \\\\\\[1pt]  '\n",
+    "display(Markdown( '$ ' + repoTitle + repoMatrix  + ' $' ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b0ca6e1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-02-27T22:27:06.512655Z",
-     "start_time": "2022-02-27T22:27:06.418133Z"
+     "end_time": "2022-03-09T22:07:03.768105Z",
+     "start_time": "2022-03-09T22:07:03.666081Z"
     },
     "code_folding": [
      10,
@@ -244,7 +258,7 @@
     "#\n",
     "#  ISSUES section\n",
     "#\n",
-    "currentIssuesTitle = \"\"\"<div style=\\\"page-break-after: always;\\\"></div>\n",
+    "currentIssuesTitle = \"\"\"\n",
     "$ \n",
     "\\\\hspace {70mm}  \\\\large \\\\color{red}  {\\\\textbf{Current Open Issues}} \\\\Huge {  \\\\phantom{X}} \n",
     "\\\\hspace {75mm} \\\\normalsize \\\\color{blue}  {\\\\textsf{Grouped by Milestone}} \\\\\\[10pt]\n",
