Updated title spacing

--- a/GitHubReportMd.ipynb
+++ b/GitHubReportMd.ipynb
@@ -6,8 +6,8 @@
    "id": "b912c774",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-09T22:07:03.614425Z",
-     "start_time": "2022-03-09T22:07:03.591370Z"
+     "end_time": "2022-03-12T16:54:24.968532Z",
+     "start_time": "2022-03-12T16:54:24.939466Z"
     }
    },
    "outputs": [],
@@ -42,14 +42,14 @@
    "id": "27be11c9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-09T22:07:03.624013Z",
-     "start_time": "2022-03-09T22:07:03.616390Z"
+     "end_time": "2022-03-12T20:42:42.065825Z",
+     "start_time": "2022-03-12T20:42:42.057698Z"
     }
    },
    "outputs": [],
    "source": [
     "OPEN_ISSUES_TEMPLATE = \"\"\"\n",
-    "\\hspace {10mm} \\\\normalsize {\\\\textbf{TITLE - #NBR}} \\\\\\[3pt] \n",
+    "\\hspace {10mm} \\\\normalsize {\\\\textbf{TITLE - #NBR}}  \\\\Huge {\\\\phantom{l}} \\\\\\[3pt] \n",
     "\\hspace {10mm} \\small {\\\\textsf{Opened AGE days ago on ODATE }} \\\\\\[1pt] \n",
     "\\hspace {10mm} \\small {\\\\textsf{Module: MODULE }} \\\\\\ \\\\\\ \n",
     "\\hspace {10mm} \\\\bbox[5pt]  {\\small {TASKS }} \\\\\\[5pt] \n",
@@ -73,8 +73,8 @@
     "\"\"\"\n",
     "STATE_TEMPLATE = \"\"\"\n",
     "\\\\begin{array}{l r} \n",
-    "\\\\textsf{Open:} &  \\\\textsf{OPEN} \\\\\\ \n",
-    "\\\\textsf{Closed:} & \\\\textsf {CLOSED} \\\\\\ \n",
+    " \\\\small { \\\\color{red} { \\\\textsf{Open:}}} & OPEN \\\\\\ \n",
+    " \\\\small { \\\\color{green} {\\\\textsf{Closed:}}} & CLOSED \\\\\\ \n",
     "\\\\end{array}  \n",
     "\"\"\"\n",
     "TASKS_TEMPLATE = \"\"\"\n",
@@ -108,8 +108,8 @@
    "id": "e2a2bb00",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-09T22:07:03.634008Z",
-     "start_time": "2022-03-09T22:07:03.625303Z"
+     "end_time": "2022-03-12T16:54:25.011658Z",
+     "start_time": "2022-03-12T16:54:24.990549Z"
     },
     "code_folding": []
    },
@@ -148,10 +148,12 @@
    "id": "e40d4211",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-09T22:07:03.654650Z",
-     "start_time": "2022-03-09T22:07:03.635007Z"
+     "end_time": "2022-03-12T16:54:25.037370Z",
+     "start_time": "2022-03-12T16:54:25.015710Z"
     },
-    "code_folding": [],
+    "code_folding": [
+     9
+    ],
     "scrolled": true
    },
    "outputs": [],
@@ -161,7 +163,7 @@
     "#\n",
     "wrapper = textwrap.TextWrapper(width=80)\n",
     "mStoneMatrix = ' \\\\begin{array}{| l l |} \\\\hline '\n",
-    "mStoneTitle =  '\\\\hspace {5mm} \\\\large { \\\\color{blue}{\\\\textbf{Currently Open Milestones} } }  \\\\\\[1pt]  '\n",
+    "mStoneTitle =  '\\\\large { \\\\color{blue}{\\\\textbf{Currently Open Milestones} } }  \\\\\\[1pt]  '\n",
     "\n",
     "sortedStoneList = sorted(milestonesList ,key=lambda i:i['due_on'] )\n",
     "\n",
@@ -187,7 +189,7 @@
     "    mStoneMatrix = mStoneMatrix  +   matrixLine + matrixLine2 + ' \\\\hdashline  '\n",
     "\n",
     "mStoneMatrix = mStoneMatrix + ' \\\\end{array} \\\\\\[1pt]  '\n",
-    "display(Markdown( '$ ' + mStoneTitle + mStoneMatrix + '  $' ))\n",
+    "display(Markdown( '$ \\\\hspace {60mm} ' + mStoneTitle + ' \\\\hspace {20mm} '  + mStoneMatrix + '  $' ))\n",
     "# print( mStoneTitle + mStoneMatrix   )\n",
     "# print('num: ', len(mDescr))"
    ]
@@ -198,8 +200,8 @@
    "id": "77e40982",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-09T22:07:03.665080Z",
-     "start_time": "2022-03-09T22:07:03.656626Z"
+     "end_time": "2022-03-12T20:42:54.728894Z",
+     "start_time": "2022-03-12T20:42:54.712816Z"
     },
     "code_folding": []
    },
@@ -220,37 +222,37 @@
     "\n",
     "for repo in reposIssuesList: \n",
     "#     print(repo['repo_name'])\n",
-    "    repoMatrixLine = '\\\\hspace {0mm} \\\\small {\\\\textbf{REPO}  }  &  STATE  \\\\\\[1pt] \\\\hline '\n",
+    "    repoMatrixLine = '\\\\hspace {0mm} \\\\small {\\\\textbf{REPO}  }  &  STATE  \\\\\\[1pt] \\\\hdashline '\n",
     "    newLine = repoMatrixLine.replace('REPO',repo['repo_name'])\n",
-    "    repoState = STATE_TEMPLATE.replace('OPEN' , str(repo['open'])  )\n",
+    "    # added phantom to right justify all state matrixes\n",
+    "    repoState = STATE_TEMPLATE.replace('OPEN' ,' '+ ' \\\\phantom{1} \\\\textbf{' + str(repo['open']) + '} ')\n",
     "    repoState = repoState.replace('CLOSED' , str(repo['closed'])  ) \n",
     "    newLine =  newLine.replace('STATE' , repoState )\n",
     "    newMatrixLine = newMatrixLine + newLine\n",
     "    \n",
-    "totStates = STATE_TEMPLATE.replace('OPEN' , str( grandTotRepoOpen )  )\n",
-    "totStates = totStates.replace('CLOSED' , str(grandTotRepoClosed) )\n",
+    "totStates = STATE_TEMPLATE.replace('OPEN' ,' \\\\textbf{' + str(grandTotRepoOpen) + '}' )\n",
+    "totStates = totStates.replace('CLOSED' , ' \\\\textbf{' + str(grandTotRepoClosed) + '}'  )\n",
     "repoMatrixLine = '\\\\hspace {0mm} \\\\small {\\\\textbf{REPO}  }  &  STATE  \\\\\\[1pt] \\\\hline '\n",
     "newLine = repoMatrixLine.replace('REPO', 'Total')\n",
     "newLine =  newLine.replace('STATE' , totStates )\n",
     "newMatrixLine = newMatrixLine + newLine\n",
     "repoMatrix = repoMatrix + newMatrixLine + '  \\\\end{array} \\\\\\[1pt] '\n",
     "# print(repoState)\n",
-    "repoTitle =  '\\\\hspace {5mm} \\\\large { \\\\color{black}{\\\\textbf{Repository Issue Status} } }  \\\\\\[1pt]  '\n",
-    "display(Markdown( '$ ' + repoTitle + repoMatrix  + ' $' ))"
+    "repoTitle =  ' \\\\Huge {\\\\phantom{T}} \\\\large {\\\\color{black}{\\\\textbf{Repository Issue Status Summary}}} \\\\\\[1pt]  '\n",
+    "display(Markdown( '$ \\\\hspace {52mm} ' + repoTitle + ' \\\\hspace {60mm}  ' + repoMatrix  + ' $' ))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0ca6e1e",
+   "id": "035f5f8f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-09T22:07:03.768105Z",
-     "start_time": "2022-03-09T22:07:03.666081Z"
+     "end_time": "2022-03-12T19:57:43.758883Z",
+     "start_time": "2022-03-12T19:57:43.649254Z"
     },
     "code_folding": [
-     10,
-     95
+     53
     ]
    },
    "outputs": [],
@@ -260,12 +262,13 @@
     "#\n",
     "currentIssuesTitle = \"\"\"\n",
     "$ \n",
-    "\\\\hspace {70mm}  \\\\large \\\\color{red}  {\\\\textbf{Current Open Issues}} \\\\Huge {  \\\\phantom{X}} \n",
-    "\\\\hspace {75mm} \\\\normalsize \\\\color{blue}  {\\\\textsf{Grouped by Milestone}} \\\\\\[10pt]\n",
+    "\\\\hspace {80mm}  \\\\large \\\\color{red}  {\\\\textbf{Current Open Issues}} \\\\Huge {  \\\\phantom{X}} \n",
+    "\\\\hspace {85mm} \\\\normalsize \\\\color{blue}  {\\\\textsf{Grouped by Milestone}} \\\\\\[10pt]\n",
     "$ \"\"\"\n",
     "display(Markdown(currentIssuesTitle ))\n",
     "milestoneTitle = '$ \\hspace {0mm} \\\\large  \\\\color{blue}{\\\\textsf{ MSTONE}} $ '\n",
     "\n",
+    "# Loop Through Milestones and display issues\n",
     "for milestone in sortedStoneList:\n",
     "    display(Markdown( milestoneTitle.replace('MSTONE', milestone['title']  ) ))\n",
     "    for issue in issuesList:\n",
@@ -318,7 +321,27 @@
     "            else:\n",
     "                openIssues = openIssues.replace('LABELS' , ' \\\\textit{No Comments} ' )    \n",
     "\n",
-    "            display(Markdown ('$ ' + openIssues   + ' $'    ))\n",
+    "            display(Markdown ('$ ' + openIssues   + ' $'    ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9485b089",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-12T16:54:25.189756Z",
+     "start_time": "2022-03-12T16:54:25.159802Z"
+    },
+    "code_folding": [
+     5
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#\n",
+    "# CLOSED ISSUES SECTION\n",
+    "#\n",
     "\n",
     "display(Markdown( closedTitle  ))\n",
     "for issue in issuesList:\n",
@@ -348,7 +371,27 @@
     "        else:\n",
     "            closedIssue = closedIssue.replace('LABELS' , ' \\\\textit{No Comments} ' )    \n",
     "            \n",
-    "        display(Markdown ('$ ' + closedIssue   + ' $'    ))\n",
+    "        display(Markdown ('$ ' + closedIssue   + ' $'    ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0ca6e1e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-03-12T16:54:25.214494Z",
+     "start_time": "2022-03-12T16:54:25.192934Z"
+    },
+    "code_folding": [
+     5
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "#\n",
+    "# RECENTLY OPEN ISSUES SECTION\n",
+    "#\n",
     "\n",
     "display(Markdown( openedTitle ))\n",
     "for issue in issuesList:\n",
