Update jupyter nbconvert

--- a/GitHubReportMd.ipynb
+++ b/GitHubReportMd.ipynb
@@ -33,7 +33,7 @@
     "milestonesList = json.loads(data)\n",
     "#\n",
     "# To Create WebPdf use:   \n",
-    "#jupyter nbconvert .\\GitHubReportMd.ipynb --to webpdf --no-input --output-dir='../truccr_atlas/reports/issues/oci' --output TRUCCR_Issues_Rpt_20220325\n",
+    "#jupyter nbconvert .\\GitHubReportMd.ipynb --to webpdf --no-input --output-dir='./docs' --output Issues_Rpt_20220325\n",
     "#"
    ]
   },
